--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,20 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
-
 body {
-  margin: -20px 0 50px;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #06cff3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-family: "Montserrat", sans-serif;
-  height: 100vh;
-  width: 100vw;
+
 }
 
 code {
@@ -25,9 +16,4 @@ code {
 p{
   font-size: 16px;
   line-height: 28px;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
 }
